# glfwTrial

./: README.rst
docs/doxygen/: .readthedocs.yaml  Doxygen  mainpage.dox  readme.txt
docs/doxygen/sphinx_docs/: conf.py
glfwTrial/: CMakeLists.txt  main.cpp
glfwTrial/test/: CMakeLists.txt  test.cpp
scripts/zsh/: build.zsh  compile.zsh
