# ================================================================================
# ================================================================================
# - File:    CMakeLists.txt
# - Purpose: Primary CMake file for C build system
#
# Source Metadata
# - Author:  Jonathan A. Webb
# - Date:    June 10, 2024
# - Version: 1.0
# - Copyright: Copyright 2024, Jonathan A. Webb Inc.
# ================================================================================
# ================================================================================

cmake_minimum_required(VERSION 3.29.5)
project(glfwTrial)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set compiler flags
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic")
endif()

# Include ExternalProject module to manage external dependencies
include(ExternalProject)

# Define GLFW as an external project
ExternalProject_Add(
    glfw
    GIT_REPOSITORY https://github.com/glfw/glfw.git
    GIT_TAG latest
    CMAKE_ARGS -DGLFW_BUILD_EXAMPLES=OFF
               -DGLFW_BUILD_TESTS=OFF
               -DGLFW_BUILD_DOCS=OFF
               -DGLFW_BUILD_INSTALL=OFF
               -DGLFW_BUILD_WAYLAND=OFF
               -DGLFW_BUILD_X11=ON
    PREFIX ${CMAKE_BINARY_DIR}/glfw
    INSTALL_COMMAND ""
)

# Find the OpenGL package
find_package(OpenGL REQUIRED)

# Define the executable
add_executable(glfwTrial main.cpp)

# Include GLFW and OpenGL directories
ExternalProject_Get_Property(glfw source_dir binary_dir)
target_include_directories(glfwTrial PRIVATE ${source_dir}/include)
target_include_directories(glfwTrial PRIVATE ${OPENGL_INCLUDE_DIR})

# Link the GLFW and OpenGL libraries
add_dependencies(glfwTrial glfw)
target_link_libraries(glfwTrial PRIVATE ${binary_dir}/src/libglfw3.a ${OPENGL_gl_LIBRARY} GL)

# Set the output directory for the executable
set_target_properties(glfwTrial PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)

# ================================================================================
# ================================================================================
# eof
